Fix T41861: Loopcut wire incorrect mode-switch

also didn't preview or select correctly.